update: padding to prevent text overflow

--- a/frontend/src/pages/dashboard/me.module.css
+++ b/frontend/src/pages/dashboard/me.module.css
@@ -42,7 +42,7 @@
   font-size: 12px;
   font-weight: bold;
   margin: 0.5rem auto;
-  padding: 12px 18px;
+  padding: 12px 15px;
   letter-spacing: 1px;
   text-transform: uppercase;
   text-decoration: none;
